WPF: Fixed wave form scroll view sizing issue with split view. Also fixed build after changes on other platforms.

--- a/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -454,7 +454,7 @@
                         <!-- Loops & Markers -->
                         <Grid Grid.Row="1">
                             <Grid.RowDefinitions>
-                                <RowDefinition />
+                                <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
