WPF: Fixed several problems with styling; border around ListView is finally fixed after several hours of work. Fixed problem with several buttons changing color on MouseOver status. Added animations for all buttons and headers. Fixed wheel sensitivity in WaveFormScrollView.

--- a/MPfm.WPF/Classes/Windows/MainWindow.xaml
+++ b/MPfm.WPF/Classes/Windows/MainWindow.xaml
@@ -135,7 +135,7 @@
                         <RowDefinition />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
-                    <Label Grid.Row="0" Content="Library Browser" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" Grid.ColumnSpan="2" />
+                    <Label Grid.Row="0" Content="Library Browser" Padding="4,4,0,0" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" Grid.ColumnSpan="2" />
                     <Grid Grid.Row="1" Margin="0,2,0,2" Grid.ColumnSpan="2" Background="{DynamicResource BrushBackgroundColor}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -203,7 +203,7 @@
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition />
                             </Grid.RowDefinitions>
-                            <Label Grid.Row="0" Content="Current Song" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                            <Label Grid.Row="0" Content="Current Song" Padding="4,4,0,0" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                             <Grid Grid.Row="1">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="170" />
@@ -480,15 +480,15 @@
                                                 <ColumnDefinition Width="Auto" />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            <Label Grid.Column="0" Content="Loops" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="0" Content="Loops" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                             <controls:HeaderImageButton Grid.Column="1" x:Name="btnPlayLoop" Title="Play" ImageSource="/Resources/Images/Buttons/play.png" Style="{StaticResource HeaderImageButton}" Click="BtnPlayLoop_OnClick" />
                                             <controls:HeaderImageButton Grid.Column="2" x:Name="btnAddLoop" Title="Add" ImageSource="/Resources/Images/Buttons/add.png" Style="{StaticResource HeaderImageButton}" Click="BtnAddLoop_OnClick" />                                                                        
                                             <controls:HeaderImageButton Grid.Column="3" x:Name="btnEditLoop" Title="Edit" ImageSource="/Resources/Images/Buttons/edit.png" Style="{StaticResource HeaderImageButton}" Click="BtnEditLoop_OnClick" />
                                             <controls:HeaderImageButton Grid.Column="4" x:Name="btnRemoveLoop" Title="Remove" ImageSource="/Resources/Images/Buttons/delete.png" Style="{StaticResource HeaderImageButton}" Click="BtnRemoveLoop_OnClick" />
                                         </Grid>
-                                        <ListView Grid.Row="1" x:Name="listViewLoops">
+                                        <ListView Grid.Row="1" x:Name="listViewLoops">                                            
                                             <ListView.View>
-                                                <GridView>
+                                                <GridView>                                                                                                        
                                                     <GridViewColumn Header="Name" Width="150" DisplayMemberBinding="{Binding Path=Name}" />
                                                     <GridViewColumn Header="Length" Width="80" DisplayMemberBinding="{Binding Path=Length}" />
                                                     <GridViewColumn Header="Start Position" Width="80" DisplayMemberBinding="{Binding Path=StartPosition}" />
@@ -510,7 +510,7 @@
                                                 <ColumnDefinition Width="Auto" />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            <Label Grid.Column="0" Content="Segments" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="0" Content="Segments" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                             <controls:HeaderImageButton Grid.Column="1" x:Name="btnAddSegment" Title="Add" ImageSource="/Resources/Images/Buttons/add.png" Style="{StaticResource HeaderImageButton}" Click="BtnAddSegment_OnClick" />
                                             <controls:HeaderImageButton Grid.Column="2" x:Name="btnEditSegment" Title="Edit" ImageSource="/Resources/Images/Buttons/edit.png" Style="{StaticResource HeaderImageButton}" Click="BtnEditSegment_OnClick" />
                                             <controls:HeaderImageButton Grid.Column="3" x:Name="btnRemoveSegment" Title="Remove" ImageSource="/Resources/Images/Buttons/delete.png" Style="{StaticResource HeaderImageButton}" Click="BtnRemoveSegment_OnClick" />
@@ -537,7 +537,7 @@
                                                 <ColumnDefinition />
                                             </Grid.ColumnDefinitions>
                                             <controls:HeaderImageButton Grid.Column="0" x:Name="btnBackSegmentDetails" Title="Back" ImageSource="/Resources/Images/Buttons/back.png" Style="{StaticResource HeaderImageButton}" Click="BtnBackSegmentDetails_OnClick" />
-                                            <Label Grid.Column="1" Content="Segment Details" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="1" Content="Segment Details" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                         </Grid>
                                         <StackPanel Grid.Row="1" Orientation="Vertical" Background="{DynamicResource BrushBackgroundColor}">
                                             <Grid Margin="2,8,8,0">
@@ -568,7 +568,7 @@
                                                 <ColumnDefinition />
                                             </Grid.ColumnDefinitions>
                                             <controls:HeaderImageButton Grid.Column="0" x:Name="btnBackLoopPlayback" Title="Back" ImageSource="/Resources/Images/Buttons/back.png" Style="{StaticResource HeaderImageButton}" Click="BtnBackLoopPlayback_OnClick" />
-                                            <Label Grid.Column="1" Content="Loop Playback" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="1" Content="Loop Playback" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                         </Grid>
                                         <StackPanel Grid.Row="1" Orientation="Vertical" Background="{DynamicResource BrushBackgroundColor}">
                                             <Grid Margin="2,8,8,0">
@@ -604,7 +604,7 @@
                                                 <ColumnDefinition Width="Auto" />
                                                 <ColumnDefinition Width="Auto" />
                                             </Grid.ColumnDefinitions>
-                                            <Label Grid.Column="0" Content="Markers" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="0" Content="Markers" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                             <controls:HeaderImageButton Grid.Column="1" x:Name="btnGoToMarker" Title="Go To" ImageSource="/Resources/Images/Buttons/goto.png" Style="{StaticResource HeaderImageButton}" Click="BtnGoToMarker_OnClick" />
                                             <controls:HeaderImageButton Grid.Column="2" x:Name="btnAddMarker" Title="Add" ImageSource="/Resources/Images/Buttons/add.png" Style="{StaticResource HeaderImageButton}" ContextMenuService.Placement="Bottom" Click="BtnAddMarker_OnClick" MouseRightButtonDown="BtnAddMarker_OnMouseRightButtonDown">
                                                 <Button.ContextMenu>
@@ -654,7 +654,7 @@
                                                 <ColumnDefinition />
                                             </Grid.ColumnDefinitions>
                                             <controls:HeaderImageButton Grid.Column="0" x:Name="btnBackMarker" Title="Back" ImageSource="/Resources/Images/Buttons/back.png" Style="{StaticResource HeaderImageButton}" Click="BtnBackMarker_OnClick" />
-                                            <Label Grid.Column="1" Content="Marker Details" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                            <Label Grid.Column="1" Content="Marker Details" Padding="4,4,0,0" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                         </Grid>
                                         <StackPanel Grid.Row="1" Orientation="Vertical" Background="{DynamicResource BrushBackgroundColor}">
                                             <Grid Margin="2,8,8,0">
@@ -695,7 +695,7 @@
                                     <ColumnDefinition />
                                     <ColumnDefinition Width="Auto" />
                                 </Grid.ColumnDefinitions>
-                                <Label Grid.Column="0" Content="Song Browser" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
+                                <Label Grid.Column="0" Content="Song Browser" Padding="4,4,0,0" Background="{DynamicResource BrushHeaderBackgroundColor}" Foreground="White" FontSize="14" FontFamily="/Resources/Fonts/#Roboto Regular" />
                                 <Grid Grid.Column="1" Background="White" Margin="2">
                                     <Grid.ColumnDefinitions>
                                         <ColumnDefinition />
